--- a/about.html
+++ b/about.html
@@ -30,22 +30,22 @@
       <li class="layui-timeline-item">
         <i class="layui-icon layui-timeline-axis"></i>
         <div class="layui-timeline-content layui-text">
-          <h3 class="layui-timeline-title">5月16日</h3>
+          <h3 class="layui-timeline-title">6月6日</h3>
           <p>
-            广西中华职业教育社调研组到学院调研
+
+            要知道，许多在眼前看来天大的事，都不是人生一战，而只是人生一站。我知道高考让你很辛苦，坚持了这么久，就已经是胜利。漫长的夏天和宽广的人生还在等着你，迈过去，你就看到了。 <br>
+
+            今年的端午节恰巧遇上了高考，古时候的高届知识分子屈原遇上了如今灵动的悻悻学子。是什么样子的火花我不知道，我知道端午节我在吃粽子，你们在高考。<br>
+
+            高考无非是祝你考试顺利，下笔如有神云云。太老套了，我祝你考的开心,考的无憾！<br>
+
+            早在成年以前我就知道赢的目的不是达到固定的目的地，而是一路上不管遇见了什么都可以一直走下去，遇见了长江大河就去学游泳，遇见了高山林立就去学攀爬，过不去就做鸵鸟状休息一会儿，但是千万要记得为了的付出买单。不要逃避不要畏惧。
             <br>
+
+            高考开心，记得考完吃粽子，不要贪食，要考两天呢。 <br>
+            高考加油！祝你们考的开心 考的顺利！3个月的暑假就在前方了 <br>
+            苦逼的我假期只有一周！祝你们考的开心！个个都可以被自己想要去的大学录取！！
           </p>
-      <li class="layui-timeline-item">
-        <i class="layui-icon layui-timeline-axis"></i>
-        <div class="layui-timeline-content layui-text">
-          <h3 class="layui-timeline-title">4月30日</h3>
-          <p>
-            电子工程与智能化学院组织师生观看学习 “纪念五四运动100周年”
-            <br>4月30日上午10：30，习近平主席出席纪念五四运动100周年大会并发表重要讲话，深情寄语当代青年。5月3日晚电子工程与智能化学院全体师生积极响应<br>在团结二教学楼302会议室集中观看学习“纪念五四运动100周年”大会视频。与此同时，各班学生也在教室多媒体一同观看大会视频。
-            <br>此次活动旨在弘扬五四精神，共抒爱国情怀，引导青年坚定理想信念、勇担历史重任，召唤大家把青春梦想、人生追求自觉融入“奉献青春、建设理工”的历史进程，坚定理想、拼搏实干，用青春同心共筑中国梦！ <i class="layui-icon"></i>
-          </p>
-        </div>
-      </li>
       <li class="layui-timeline-item">
       <i class="layui-icon layui-timeline-axis"></i>
       <div class="layui-timeline-content layui-text">
@@ -90,7 +90,7 @@
     </ul>  
   </div>
     <div class="layui-footer" style="text-align: center;    left: 0px; font-size: 16px">
-    © 陈乾运
+    ©菜牙
   </div>
   </div>
 <script src="./layui/layui.js"></script>
