--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewpo2yii16rt" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>我的大学班级生活</title>
     <link rel="stylesheet" href="./layui/css/layui.css">
     <link rel="stylesheet" href="./layui/css/nr.css">
@@ -29,122 +29,124 @@
             猿强，则国强。国强，则猿更强！
             <br>
         </blockquote>
+
         <div class="neirong">
-            <!--第一个-->
-            <div class="neiron_one">
-                <h3 >校园焦点新闻</h3>
-                <hr>
-                <div class="picture">
-                    <img src="./layui/images/1.jpg" alt="" height="250px" width="300px">
-                </div>
-                <ul class="neiron_onewz">
-                    <li>自治区教育工委调研指导组到学院开展党的建设和意识形态工作调研&nbsp;&nbsp;<span>2019-4-27</span></li>
-                    <br>
-                    <li>中国老促会到学院调查职业教育&nbsp;&nbsp;<span>2019-4-02</span></li>
-                    <br>
-                    <li>我院举行首届"三月三"传统民族运动会&nbsp;&nbsp;<span>2019-3-29</span></li>
-                    <br>
-                    <li>我院举行"新时代讲习所"揭牌仪式&nbsp;&nbsp;<span>2019-3-20</span></li>
-                    <br>
-                    <li>我院与日本客人洽谈国际交流与合作办学&nbsp;&nbsp;<span>2019-3-19</span></li>
-                    <br>
-                    <li>学院党委举行意识形态工作目标和安全稳定工作责任书签订仪式&nbsp;&nbsp;<span>2019-3-15</span></li>
-                    <br>
-                    <li>学院参加2019年全区教育系统全面从严治党工作视频会议&nbsp;&nbsp;<span>2019-3-15</span></li>
-                    <br>
-                    <li>学院召开学习贯彻全区教育大会精神暨2019年春季学期工作部署会&nbsp;&nbsp;<span>2019-1-04<span></li>
-                </ul>
+        <!--第一个-->
+        <div class="neiron_one">
+            <h3 >校园焦点新闻</h3>
+            <hr>
+            <div class="picture">
+                <img src="./layui/images/1.jpg" alt="" height="250px" width="300px">
             </div>
-            <!--第二个-->
-            <div class="neiron_two">
-                <h3> 通知公告</h3>
-                <hr>
-                <!--
-                <div class="picture">
-                  <img src="./layui/images/1.jpg" alt="" height="250px" width="300px">
-                </div>
-                -->
-                <div class="picture">
-                    <p class="bjys">2019年</p>
-                    <p class="biank">5月</p>
-                </div>
-                <ul class="neiron_onewz"
+            <ul class="neiron_onewz">
+                <li>自治区教育工委调研指导组到学院开展党的建设和意识形态工作调研&nbsp;&nbsp;<span>2019-4-27</span></li>
                 <br>
+                <li>中国老促会到学院调查职业教育&nbsp;&nbsp;<span>2019-4-02</span></li>
                 <br>
-                <li>关于崇左校区计算机维护设备采购项目竞争性谈判公告&nbsp;&nbsp;<span>2019-5-02</span></li>
+                <li>我院举行首届"三月三"传统民族运动会&nbsp;&nbsp;<span>2019-3-29</span></li>
                 <br>
-                <br>
-                <br>
-                <div class="picture">
-                    <p class="bjys">2019年</p>
-                    <p class="biank">4月</p>
-                </div>
-                <br>
-                <br>
-                <li>我院举行首届"三月三"传统民族运动会&nbsp;&nbsp;<span>2019-4-29</span></li>
-                <br>
-                <br>
-                <div class="picture">
-                    <p class="bjys">2019年</p>
-                    <p class="biank">3月</p>
-                </div>
-                <br>
+                <li>我院举行"新时代讲习所"揭牌仪式&nbsp;&nbsp;<span>2019-3-20</span></li>
                 <br>
                 <li>我院与日本客人洽谈国际交流与合作办学&nbsp;&nbsp;<span>2019-3-19</span></li>
                 <br>
+                <li>学院党委举行意识形态工作目标和安全稳定工作责任书签订仪式&nbsp;&nbsp;<span>2019-3-15</span></li>
                 <br>
-                <div class="picture">
-                    <p class="bjys">2019年</p>
-                    <p class="biank">2月</p>
-                </div>
+                <li>学院参加2019年全区教育系统全面从严治党工作视频会议&nbsp;&nbsp;<span>2019-3-15</span></li>
                 <br>
-                <li>学院参加2019年全区教育系统全面从严治党工作视频会议&nbsp;&nbsp;<span>2019-2-15</span></li>
-                </ul>
+                <li>学院召开学习贯彻全区教育大会精神暨2019年春季学期工作部署会&nbsp;&nbsp;<span>2019-1-04<span></li>
+            </ul>
+        </div>
+        <!--第二个-->
+        <div class="neiron_two">
+            <h3> 通知公告</h3>
+            <hr>
+            <!--
+            <div class="picture">
+              <img src="./layui/images/1.jpg" alt="" height="250px" width="300px">
             </div>
-            <!--第三个-->
-            <div class="neiron_three">
-                <h3 >综合新闻</h3>
-                <hr>
-                <ul class="neiron_onewz">
-                    <li>我院开展以“讲精彩故事 展自我风采” 为主题的讲故事比赛&nbsp;&nbsp;<span>2019-5-15</span></li>
-                    <br>
-                    <li>青春心向党.建功新时代---学院团委组织召开学习贯彻习近平总书记在纪念五四运动100周年大会上重要讲话精神座谈会&nbsp;&nbsp;<span>2019-5-15</span></li>
-                    <br>
-                    <li>机械与汽车工程学院开展校企共建实训基地揭牌仪式暨2019年职教活动周职业能力展演活动&nbsp;&nbsp;<span>2019-5-14</span></li>
-                    <br>
-                    <li>电子与智能化学院开展跟岗实习学生回访暨校企党建共建工作实地座谈&nbsp;&nbsp;<span>2019-5-10</span></li>
-                    <br>
-                    <li>我院与中移铁通崇左分公司举行网络综合实训基地揭牌仪式&nbsp;&nbsp;<span>2019-5-10</span></li>
-                    <br>
-                    <li>电子工程与智能化学院组织师生观看学习 “纪念五四运动100周年”大会实况&nbsp;&nbsp;<span>2019-5-10</span></li>
-                    <br>
-                    <li>我校土木工程（建筑材料）学院荣获2018年度崇左市“两红两优”评选5项殊荣&nbsp;&nbsp;<span>2019-5-08</span></li>
-                </ul>
+            -->
+            <div class="picture">
+                <p class="bjys">2019年</p>
+                <p class="biank">5月</p>
             </div>
-            <!--第四个-->
-            <div class="neiron_four">
-                <h3 >科教动态</h3>
-                <hr>
-                <ul class="neiron_onewz">
-                    <li>艺术设计学院召开2018年党员 民主生活会&nbsp;&nbsp;<span>2019-1-15</span></li>
-                    <br>
-                    <li>自治区教育厅关于公布2018年度广西职业教育培训基地立项结果的通知&nbsp;&nbsp;<span>2019-1-04</span></li>
-                    <br>
-                    <li>艺术学院召开内部质量保证体系诊断与改进工作培训会&nbsp;&nbsp;<span>2018-12-28</span></li>
-                    <br>
-                    <li>电子工程与智能化学院召开内部质量保证体系诊断改与改进工作会议&nbsp;&nbsp;<span>2018-12-25</span></li>
-                    <br>
-                    <li>土木工程（建筑材料）学院组织开展内部质量保证体系诊断与改进工作专题学习&nbsp;<span>2018-12-24</span></li>
-                    <br>
-                    <li>商学院召开内部质量保证体系诊改培训与工作推进会&nbsp;&nbsp;<span>2018-12-24</span></li>
-                    <br>
-                    <li>机械与汽车工程学院组织开展内部质量保证体系诊断与改进工作专题学习&nbsp;&nbsp;<span>2018-12-24</span></li>
-                </ul>
+            <ul class="neiron_onewz"
+            <br>
+            <br>
+            <li>关于崇左校区计算机维护设备采购项目竞争性谈判公告&nbsp;&nbsp;<span>2019-5-02</span></li>
+            <br>
+            <br>
+            <br>
+            <div class="picture">
+                <p class="bjys">2019年</p>
+                <p class="biank">4月</p>
             </div>
+            <br>
+            <br>
+            <li>我院举行首届"三月三"传统民族运动会&nbsp;&nbsp;<span>2019-4-29</span></li>
+            <br>
+            <br>
+            <div class="picture">
+                <p class="bjys">2019年</p>
+                <p class="biank">3月</p>
+            </div>
+            <br>
+            <br>
+            <li>我院与日本客人洽谈国际交流与合作办学&nbsp;&nbsp;<span>2019-3-19</span></li>
+            <br>
+            <br>
+            <div class="picture">
+                <p class="bjys">2019年</p>
+                <p class="biank">2月</p>
+            </div>
+            <br>
+            <li>学院参加2019年全区教育系统全面从严治党工作视频会议&nbsp;&nbsp;<span>2019-2-15</span></li>
+            </ul>
+        </div>
+        <!--第三个-->
+        <div class="neiron_three">
+            <h3 >综合新闻</h3>
+            <hr>
+            <ul class="neiron_onewz">
+                <li>我院开展以“讲精彩故事 展自我风采” 为主题的讲故事比赛&nbsp;&nbsp;<span>2019-5-15</span></li>
+                <br>
+                <li>青春心向党.建功新时代---学院团委组织召开学习贯彻习近平总书记在纪念五四运动100周年大会上重要讲话精神座谈会&nbsp;&nbsp;<span>2019-5-15</span></li>
+                <br>
+                <li>机械与汽车工程学院开展校企共建实训基地揭牌仪式暨2019年职教活动周职业能力展演活动&nbsp;&nbsp;<span>2019-5-14</span></li>
+                <br>
+                <li>电子与智能化学院开展跟岗实习学生回访暨校企党建共建工作实地座谈&nbsp;&nbsp;<span>2019-5-10</span></li>
+                <br>
+                <li>我院与中移铁通崇左分公司举行网络综合实训基地揭牌仪式&nbsp;&nbsp;<span>2019-5-10</span></li>
+                <br>
+                <li>电子工程与智能化学院组织师生观看学习 “纪念五四运动100周年”大会实况&nbsp;&nbsp;<span>2019-5-10</span></li>
+                <br>
+                <li>我校土木工程（建筑材料）学院荣获2018年度崇左市“两红两优”评选5项殊荣&nbsp;&nbsp;<span>2019-5-08</span></li>
+            </ul>
+        </div>
+        <!--第四个-->
+        <div class="neiron_four">
+            <h3 >科教动态</h3>
+            <hr>
+            <ul class="neiron_onewz">
+                <li>艺术设计学院召开2018年党员 民主生活会&nbsp;&nbsp;<span>2019-1-15</span></li>
+                <br>
+                <li>自治区教育厅关于公布2018年度广西职业教育培训基地立项结果的通知&nbsp;&nbsp;<span>2019-1-04</span></li>
+                <br>
+                <li>艺术学院召开内部质量保证体系诊断与改进工作培训会&nbsp;&nbsp;<span>2018-12-28</span></li>
+                <br>
+                <li>电子工程与智能化学院召开内部质量保证体系诊断改与改进工作会议&nbsp;&nbsp;<span>2018-12-25</span></li>
+                <br>
+                <li>土木工程（建筑材料）学院组织开展内部质量保证体系诊断与改进工作专题学习&nbsp;<span>2018-12-24</span></li>
+                <br>
+                <li>商学院召开内部质量保证体系诊改培训与工作推进会&nbsp;&nbsp;<span>2018-12-24</span></li>
+                <br>
+                <li>机械与汽车工程学院组织开展内部质量保证体系诊断与改进工作专题学习&nbsp;&nbsp;<span>2018-12-24</span></li>
+            </ul>
         </div>
     </div>
+
+    </div>
     <div class="dibu">
-        © 陈乾运
+        ©菜牙
     </div>
 </div>
 <script src="./layui/layui.js"></script>
