--- a/life.html
+++ b/life.html
@@ -11,10 +11,13 @@
       padding: 0;
     }
     .music{
-      margin-top: 0;
-      margin-left: 0%;
-      width: 30%;
-      height: 850px;
+      position: absolute;
+      left:0px;
+      top: 50px;
+      width: 80%;
+      height: 855px;
+      margin: 0px;
+      padding: 0px;
     }
     .bjtp{
       background-image: url("./layui/images/2.jpg");
@@ -52,14 +55,11 @@
     您的浏览器不支持 audio 标签。
   </audio>
   -->
-  <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" class="music" src="//music.163.com/outchain/player?type=4&id=2126011&auto=1&height=430"></iframe>
+  <iframe class="music" frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="//music.163.com/outchain/player?type=4&id=2126011&auto=1&height=430"></iframe>
   <div class="layui-footer" style="text-align: center;    left: 0px;font-size: 16px">
-    © 菜牙
+    ©菜牙
   </div>
 </div>
-<script>
-  alert("请在连接了网络的的情况下打开本页面否者不会出现音乐");
-</script>
 
 <!--
 <script src="./layui/layui.js"></script>
