--- a/js.html
+++ b/js.html
@@ -12,6 +12,9 @@
     .layui-colla-content ol{
       padding-left: 15px;
     }
+    .nrmz span{
+      color: #a5a5a5;
+    }
   </style>
 </head>
 <body>
@@ -35,7 +38,125 @@
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
       <legend>学习HTML/CSS</legend>
     </fieldset>
-      <div class="layui-collapse" lay-filter="test">
+    <div class="layui-collapse" lay-filter="test">
+      <div class="layui-colla-item">
+        <h2 class="layui-colla-title">锚点</h2>
+        <div class="layui-colla-content">
+          <p>在a标签中的href：中输入#号加上要跳转到的标签位置添加一个id属性即可</p>
+          <p>也可输入在同一个文件夹下的别的网页文件的名称即可跳转</p>
+        </div>
+      </div>
+    </div>
+    <div class="layui-collapse" lay-filter="test">
+      <div class="layui-colla-item">
+        <h2 class="layui-colla-title">可变元素</h2>
+        <div class="layui-colla-content">
+          <p>
+          　　可变元素为根据上下文语境决定该元素为块元素或者内联元素。 <br>
+          　　* applet - java applet <br>
+          　　* button - 按钮 <br>
+          　　* del - 删除文本 <br>
+          　　* iframe - inline frame <br>
+          　　* ins - 插入的文本 <br>
+          　　* map - 图片区块(map) <br>
+          　　* object - object对象 <br>
+          　　* script - 客户端脚本 <br>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="layui-collapse" lay-filter="test">
+      <div class="layui-colla-item">
+        <h2 class="layui-colla-title">HTML中的块元素</h2>
+        <div class="layui-colla-content">
+        <p>　　* address - 地址 <br>
+          　　* blockquote - 块引用 <br>
+          　　* center - 举中对齐块 <br>
+          　　* dir - 目录列表 <br>
+          　　* div - 常用块级容易，也是css layout的主要标签 <br>
+          　　* dl - 定义列表 <br>
+          　　* fieldset - form控制组 <br>
+          　　* form - 交互表单 <br>
+          　　* h1 - 大标题 <br>
+          　　* h2 - 副标题 <br>
+          　　* h3 - 3级标题 <br>
+          　　* h4 - 4级标题 <br>
+          　　* h5 - 5级标题 <br>
+          　　* h6 - 6级标题 <br>
+          　　* hr - 水平分隔线 <br>
+          　　* isindex - input prompt <br>
+          　　* menu - 菜单列表 <br>
+          　　* noframes - frames可选内容，（对于不支持frame的浏览器显示此区块内容 <br>
+          　　* noscript - 可选脚本内容（对于不支持script的浏览器显示此内容） <br>
+          　　* ol - 排序表单 <br>
+          　　* p - 段落 <br>
+          　　* pre - 格式化文本 <br>
+          　　* table - 表格 <br>
+          　　* ul - 非排序列表 <br>
+        </p>
+        </div>
+      </div>
+    </div>
+    <div class="layui-collapse" lay-filter="test">
+      <div class="layui-colla-item">
+        <h2 class="layui-colla-title">HTML中的内联元素</h2>
+        <div class="layui-colla-content">
+          <p>　
+               * a - 锚点 <br>
+            　　* abbr - 缩写 <br>
+            　　* acronym - 首字 <br>
+            　　* b - 粗体(不推荐) <br>
+            　　* bdo - bidi override <br>
+            　　* big - 大字体 <br>
+            　　* br - 换行 <br>
+            　　* cite - 引用 <br>
+            　　* code - 计算机代码(在引用源码的时候需要) <br>
+            　　* dfn - 定义字段 <br>
+            　　* em - 强调 <br>
+            　　* font - 字体设定(不推荐) <br>
+            　　* i - 斜体 <br>
+            　　* img - 图片 <br>
+            　　* input - 输入框 <br>
+            　　* kbd - 定义键盘文本 <br>
+            　　* label - 表格标签 <br>
+            　　* q - 短引用 <br>
+            　　* s - 中划线(不推荐) <br>
+            　　* samp - 定义范例计算机代码 <br>
+            　　* select - 项目选择 <br>
+            　　* small - 小字体文本 <br>
+            　　* span - 常用内联容器，定义文本内区块 <br>
+            　　* strike - 中划线 <br>
+            　　* strong - 粗体强调 <br>
+            　　* sub - 下标 <br>
+            　　* sup - 上标 <br>
+            　　* textarea - 多行文本输入框 <br>
+            　　* tt - 电传文本 <br>
+            　　* u - 下划线 <br>
+            　　* var - 定义变量 <br>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="layui-collapse" lay-filter="test">
+      <div class="layui-colla-item">
+        <h2 class="layui-colla-title">HTML布局</h2>
+        <div class="layui-colla-content nrmz">
+          <p>使用div元素的HTML布局</p>
+          <p>注释：使用div元素常用作布局工具，因为能够轻松地通过 CSS 对其进行定位。</p>
+          <p>使用HTML5的网站布局</p>
+          <p>HTML5语义元素</p>
+          <p>header:<span>定义文档或节的页眉</span></p>
+          <p>nav:<span>定义导航链接的容器</span></p>
+          <p>section:<span>定义文档中的节</span></p>
+          <p>article:<span>定义独立的自包含文章</span></p>
+          <p>aside:<span>定义内容之外的内容（比如侧栏）</span></p>
+          <p>footer:<span>定义文档或节的页脚</span></p>
+          <p>details:<span>定义额外的细节</span></p>
+          <p>summary:<span>定义 details 元素的标题</span></p>
+        </div>
+      </div>
+    </div>
+    <div class="layui-collapse" lay-filter="test">
       <div class="layui-colla-item">
       <h2 class="layui-colla-title">HTML5和HTML4的区别</h2>
       <div class="layui-colla-content">
@@ -79,7 +200,33 @@
   <fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
   <legend>学习Javascript</legend>
 </fieldset>
-  
+    <div class="layui-collapse" lay-filter="test">
+      <div class="layui-colla-item">
+        <h2 class="layui-colla-title">JS输出九九乘法表</h2>
+        <div class="layui-colla-content">
+          <p>for (let i = 1;i <= 9;i++){<br>
+              for (let j = 9;j <= i;j++){<br>
+            document.write(j+"*"+1+"="+j*i);
+            }<br>
+            document.write("这里输入的是br");
+            }
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="layui-collapse" lay-filter="test">
+      <div class="layui-colla-item">
+        <h2 class="layui-colla-title">JS数组的增删改查</h2>
+        <div class="layui-colla-content">
+          <p>.splice();参数1：从什么位置开始 参数2：需要替换或者删除几条元素 参数3:要添加新的内容是啥
+            如果只输入到参数2的话就是删除 参数1：是从什么位置开始 参数2：要删除几条数据<br>
+            .push();在数组中最后一条新增一条数据或多条数据，并且会将新增内容之后的数组的长度返回给我们<br>
+            .unshift();在数组中最前面新增一条或者多条数据，并且会将新增内容之后的数据的长度返回给我们<br>
+            .pop();删除数组中最后一条数据，并且会将删除内容之后的数据返回给我们<br>
+            .shift();删除数组中最前面一条数据，并且会将删除内容之后的数据返回给我们</p>
+        </div>
+      </div>
+    </div>
   <div class="layui-collapse" lay-filter="test">
   <div class="layui-colla-item">
     <h2 class="layui-colla-title">为什么JS社区大量采用未发布或者未广泛支持的语言特性？</h2>
@@ -126,7 +273,7 @@
     </div>
           
   <div class="layui-footer" style="text-align: center;    left: 0px;font-size: 16px">
-    © 陈乾运
+    ©菜牙
   </div>
 
 </div>
